2006-03-30  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        * khtml/ecma/kjs_binding.cpp: Added names for VALIDATION_ERR and
        TYPE_MISMATCH_ERR; new DOM Level 3 errors that need to be listed in
        the mapping from error code to error name.

        * dom/Element.idl: Removed comment from bad old days where we had to
        touch these files to make them rebuild.

2006-03-30  Maciej Stachowiak  <mjs@apple.com>

        - fixed Windows build breakage from previous change

        * platform/ScrollView.h:
        * platform/win/FontWin.cpp:
        (WebCore::Font::drawLineForText):
        * platform/win/ScrollViewWin.cpp:
        (WebCore::ScrollView::scrollOffset):
        (WebCore::ScrollView::scrollBy):

2006-03-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.
        
        - various Point / Size related cleanup
        
        First, I clarified the semantics of some operations to keep a
        better distinction between IntPoint and IntSize:
        
        * platform/IntPoint.h:
        (WebCore::IntPoint::move): new convenience to move a point by separate
        x and y deltas.
        (WebCore::operator+=): You can't add a point to a point, you can only add
        a size to a point.
        (WebCore::operator+): ditto
        (WebCore::operator-): point - point = size; point - size = point
        (WebCore::operator-=): only allow subtracting a size for the mutating version
        * platform/IntRect.h:
        (WebCore::IntRect::move): tweaked to use IntPoint::move, also, move by an IntSize,
        not an IntPoint.
        * platform/IntSize.h:
        (WebCore::IntSize::shrunkTo): analog to expandedTo
        (WebCore::IntSize::clampNegativeToZero): a handy helper
        (WebCore::operator-): Added unary minus operator

        Made the same changes for FloatPoint:
        
        * platform/FloatPoint.h:
        (WebCore::FloatPoint::move):
        (WebCore::operator+=):