@@ -335,7 +335,8 @@ void RenderBox::paintBoxDecorations(PaintInfo& i, int _tx, int _ty)
 
     // If we have a native theme appearance, paint that before painting our background.  
     // The theme will tell us whether or not we should also paint the CSS background.
-    if (!style()->hasAppearance() || theme()->paint(this, i, IntRect(_tx, _ty, w, h))) {
+    bool themePainted = style()->hasAppearance() && !theme()->paint(this, i, IntRect(_tx, _ty, w, h));
+    if (!themePainted) {
         // The <body> only paints its background if the root element has defined a background
         // independent of the body.  Go through the DOM to get to the root element's render object,
         // since the root could be inline and wrapped in an anonymous block.
@@ -344,7 +345,7 @@ void RenderBox::paintBoxDecorations(PaintInfo& i, int _tx, int _ty)
     }
     
     // The theme will tell us whether or not we should also paint the CSS border.
-    if ((!style()->hasAppearance() || theme()->paintBorder(this, i, IntRect(_tx, _ty, w, h))) && style()->hasBorder())
+    if ((!style()->hasAppearance() || (!themePainted && theme()->paintBorderOnly(this, i, IntRect(_tx, _ty, w, h)))) && style()->hasBorder())
         paintBorder(i.p, _tx, _ty, w, h, style());
 }
 
