@@ -94,7 +94,7 @@ bool RenderTheme::paint(RenderObject* o, const RenderObject::PaintInfo& i, const
     return true; // We don't support the appearance, so let the normal background/border paint.
 }
 
-bool RenderTheme::paintBorder(RenderObject* o, const RenderObject::PaintInfo& i, const IntRect& r)
+bool RenderTheme::paintBorderOnly(RenderObject* o, const RenderObject::PaintInfo& i, const IntRect& r)
 {
     if (i.p->paintingDisabled())
         return false;
@@ -113,24 +113,6 @@ bool RenderTheme::paintBorder(RenderObject* o, const RenderObject::PaintInfo& i,
     }
     
     return false;
-}
-bool RenderTheme::shouldPaintBorder(RenderObject* o)
-{
-    // Call the appropriate paint method based off the appearance value.
-    switch (o->style()->appearance()) {
-        case TextFieldAppearance:
-            return true;
-        case CheckboxAppearance:
-        case RadioAppearance:
-        case PushButtonAppearance:
-        case SquareButtonAppearance:
-        case ButtonAppearance:
-            return false;
-        default:
-            break;
-    }
-    
-    return false; // We don't support the appearance, so let the normal background/border paint.
 }
 
 short RenderTheme::baselinePosition(const RenderObject* o) const
